fix buttons on small screen

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -33,7 +33,6 @@ button {
 .buttons-container {
     margin: auto;
     margin-top: 5px;
-    width: 520px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
